test if hiding overflow on body fixes mobile safari scroll issue

--- a/app/assets/stylesheets/index.scss
+++ b/app/assets/stylesheets/index.scss
@@ -8,6 +8,6 @@ body {
 
 @media screen and (max-width: 992px) {
   body {
-    -webkit-overflow-scrolling: touch;
+    overflow: hidden;
   }
 }
